--- a/new-try/assets/css/bio.css
+++ b/new-try/assets/css/bio.css
@@ -2,12 +2,35 @@
     background-color: rgba(0,0,0,0.2);
     border: solid 7px rgba(0,0,0,0.01);
 }
+main{
+    font-family: "EB Garamond", serif;
+}
 .biography{
-    display: flex;
-    margin-top: 2.5rem;
-    margin-left: 1rem;
+    margin: 1.9rem;
+    font-size: 1.3rem;
 }
 .my-photo{
     width: 15rem;
     border-radius: 15px;
+    margin-right: 1rem;
+    float: left;
+}
+.like-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.title{
+    margin: 0;
+    font-size: 3rem;
+    font-weight: 900;
+}
+ul{
+    list-style-type: none;
+    padding-left: 1rem;
+}
+li{
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    font-weight: 700;
 }
