--- a/new-try/assets/css/bio.css
+++ b/new-try/assets/css/bio.css
@@ -2,12 +2,10 @@
     background-color: rgba(0,0,0,0.2);
     border: solid 7px rgba(0,0,0,0.01);
 }
-main{
-    font-family: "EB Garamond", serif;
-}
 .biography{
     margin: 1.9rem;
-    font-size: 1.3rem;
+    font-size: 1.3rem; font-family: "EB Garamond", serif;
+
 }
 .my-photo{
     width: 15rem;
@@ -28,9 +26,17 @@ main{
 ul{
     list-style-type: none;
     padding-left: 1rem;
+    margin-bottom: 10rem;
 }
 li{
     margin-bottom: 2rem;
     font-size: 2.5rem;
     font-weight: 700;
+}
+ul img{
+    margin-right: 0.5rem;
+    width: 2rem;
+}
+.mentions{
+    margin-bottom: 2rem;
 }
