--- a/new-try/assets/css/bio.css
+++ b/new-try/assets/css/bio.css
@@ -3,7 +3,7 @@
     border: solid 7px rgba(0,0,0,0.01);
 }
 .biography{
-    margin: 1.9rem;
+    margin: 2.1rem;
     font-size: 1.3rem; font-family: "EB Garamond", serif;
 
 }
@@ -16,21 +16,25 @@
 .like-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 .title{
     margin: 0;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 ul{
     list-style-type: none;
-    padding-left: 1rem;
+    padding: 1rem;
     margin-bottom: 10rem;
+    background-color: rgb(14, 11, 11);
+    border-radius: 10px;
 }
 li{
-    margin-bottom: 2rem;
-    font-size: 2.5rem;
+    margin-bottom: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 700;
 }
 ul img{
@@ -39,4 +43,89 @@ ul img{
 }
 .mentions{
     margin-bottom: 2rem;
+}
+.gaming{
+  color: rgb(216, 8, 8);  
+  font-family: "Gaming",serif;
+}
+.board{
+    color: rgb(214, 73, 31);
+    font-family: "BoardGames",serif;
+}
+.music{
+    color: rgb(32, 177, 177);
+    font-family: "Music",serif;
+    font-weight: 400;
+}
+.chun{
+    color: rgb(148, 81, 36);
+    font-family: "Wing-Chun",serif;
+}
+.eat{
+    color: rgb(218, 218, 51);
+    font-family: "Eating",serif;
+}
+.dogs{
+    color: rgb(231, 132, 93);
+    font-family: "Dogs",serif;
+    font-size: 2.4rem;
+}
+.climate{
+    color: rgb(36, 167, 36);
+    font-family: "Climate-Crisis",serif;
+}
+.astronomy{
+    color: rgb(43, 5, 94);
+    font-family: "Space",serif;
+}
+.mentions{
+    position: absolute;
+    left: 0; bottom: 0;
+    margin: 0;
+    z-index: 1001;
+    border: none;
+    font-size: 1rem;
+    font-weight: 700;
+    font-family: "Chakra Petch";
+    cursor: pointer;
+    background-color: transparent;
+}
+button a{
+    color: black;
+    transition: color 0.15s;
+}
+button a:hover{
+    color: gray;
+}
+
+@media only screen and (min-width:700px){
+    .like-container{
+        align-items: center;
+    }
+    .biography{
+        font-size: 1.8rem;
+    }
+    li{
+        font-size: 2.2rem;
+    }
+    .dogs{
+        font-size: 2.8rem;
+    }
+}
+@media only screen and (min-width:1000px){
+    .biography{
+        margin-bottom: 8rem;
+    }
+    li{
+        font-size: 3rem;
+    }
+    .dogs{
+        font-size: 3.6rem;
+    }
+    ul{
+        padding: 2rem;
+    }
+    ul img{
+        width: 3.5rem;
+    }
 }
