--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -1,14 +1,13 @@
 header:hover{
     .about-me-container{
         background-color: rgba(0,0,0,0.2);
-        border: solid  rgba(0,0,0,0.01);
     }
 }
 
 .biography{
     margin: 3rem;
-    font-size: 1rem; font-family: "EB Garamond", serif;
-
+    font-size: 0.5rem; font-family: "EB Garamond", serif;
+    margin-left: 0;
 }
 .my-photo{
     width: 8rem;
@@ -18,10 +17,6 @@ header:hover{
     margin-right: 1rem;
     float: left;
     margin-top: 0.8rem;
-}
-.like-container{
-    display: flex;
-    flex-direction: column;
 }
 .title{
     margin: 0;
@@ -113,7 +108,7 @@ button a:hover{
         align-items: center;
     }
     .biography{
-        font-size: 1.8rem;
+        font-size: 1rem;
         width: 100%;
     }
     li{
@@ -124,10 +119,15 @@ button a:hover{
     }
 }
 @media only screen and (min-width:1000px){
+    main{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
     .biography{
         margin-top: 2rem;
         margin-bottom: 18rem;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
     .my-photo{
         width: 20rem;
