--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -1,35 +1,41 @@
+main{
+    display: flex;
+    flex-direction: column;
+}
 header:hover{
     .about-me-container{
         background-color: rgba(0,0,0,0.2);
         border-radius: 50%;
     }
 }
-
+h1{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 0.5rem;
+}
 .biography{
-    margin: 3rem;
-    font-size: 0.5rem; font-family: "EB Garamond", serif;
-    margin-left: 0;
+    margin: 2rem 0 0 0;
+    font-size: 0.71rem; font-family: "EB Garamond", serif;
+
 }
 .my-photo{
-    width: 8rem;
+    width: 10rem;
     border-radius: 15px;
-    margin: 0.8rem 1rem 1rem 2rem;
-    margin-left: 2rem;
-    margin-right: 1rem;
     float: left;
-    margin-top: 0.8rem;
+    margin-right: 0.4rem;
 }
 .title{
+    position: absolute;
+    top: 16.4rem;
+    left: 6.1rem;
+    justify-content: center;
     margin: 0;
-    font-size: 2rem;
+    padding-left: 4rem;
+    font-size: 1rem;
     font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 ul{
     list-style-type: none;
-    padding: 1rem;
     background-color: rgb(53, 52, 52);
     border-radius: 10px;
 }
@@ -105,44 +111,67 @@ button a:hover{
         background-color: rgba(0,0,0,0.2);
         border: solid 7px rgba(0,0,0,0.01);
     }
-    .like-container{
-        align-items: center;
-    }
-    .biography{
-        font-size: 1rem;
-        width: 100%;
-    }
-    li{
-        font-size: 2.2rem;
-    }
-    .dogs{
-        font-size: 2.8rem;
-    }
-}
-@media only screen and (min-width:1000px){
-    main{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    .biography{
-        margin-top: 2rem;
-        margin-bottom: 18rem;
-        font-size: 1.5rem;
+}    
+@media only screen and (min-width:600px) and (max-width:999px){
+    h1{
+        font-size: 1.7rem;
+        padding-left: 10rem;
+        margin-top: 1rem;
     }
     .my-photo{
-        width: 20rem;
+        width: 15rem;
+    }
+    .biography{
+        font-size: 1.3rem;
+        width: 100%;
+    }
+    .title{
+        top: 25rem;
+        left: 11.6rem;
+        font-size: 2rem;
+    }
+    ul img{
+        width: 2.6rem;
     }
     li{
         font-size: 3rem;
     }
     .dogs{
-        font-size: 3.6rem;
+        font-size: 4rem;
+    }
+}
+@media only screen and (min-width:1000px){
+    h1{
+        font-size: 3rem;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .title{
+        display: block;
+        position: initial;
+        font-size: 5rem;
+    }
+    .biography{
+        margin-top: 2.5rem;
+        margin-bottom: 10rem;
+        font-size: 2.52rem;
+    }
+    .my-photo{
+        width: 20rem;
+    }
+    li{
+        font-size: 5rem;
+    }
+    .dogs{
+        font-size: 7rem;
     }
     ul{
         padding: 2rem;
     }
     ul img{
-        width: 3.5rem;
+        width: 5rem;
     }
 }
