--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -1,3 +1,7 @@
+body{
+    background-size: 10rem;
+    background-image: url(/assets/images/about-me-bg.jpg);
+}
 main{
     display: flex;
     flex-direction: column;
@@ -8,32 +12,70 @@ header:hover{
         border-radius: 50%;
     }
 }
-h1{
+.title-container{
+    justify-content: center;
     display: flex;
-    justify-content: space-evenly;
-    font-size: 0.8rem;
+}
+h1, .bio-text, .title-like{
+    border: 1px gray solid;
+}
+h1{
+    font-size: 0.7rem;
+    background-color: white;
+    padding: 0.1rem;
+    border-radius: 4px;
+    margin-top: 3rem;
 }
 .biography{
-    margin: 2rem 0 0 0;
+    display: flex;
+    margin: 0.1rem 0 0 0;
     font-size: 0.71rem; font-family: "EB Garamond", serif;
 }
+.bio-text-container{
+    display: flex;
+    align-items: center;
+}
 .bio-text{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    background-color: white;
+    padding: 0.5rem;
+    margin-right: 0.1rem;
+    border-radius: 10px;
+    border: 1px gray solid;
 }
 .my-photo{
     width: 9rem;
     border-radius: 15px;
-    float: left;
     margin-right: 0.7rem;
     margin-left: 0.2rem;
 }
-.title{
-    
+.bg-mention{
+    font-size: 0.6rem;
+    margin-left: 0.5rem;
+    background-color: white;
+    border-radius: 4px;
+    border: 1px gray solid;
+    display: inline;
+    padding: 0.2rem;
+
+}
+.title-like{
+    background-color: white;
     justify-content: center;
-    margin: 0;
-    padding-left: 4rem;
     font-size: 1rem;
     font-weight: 900;
+    padding: 0.1rem;
+    border-radius: 4px;
+    margin-bottom: 0.1rem;
+}
+.title-like-container{
+    display: flex;
+    justify-content: center;
+}
+.like-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 0.5rem;
 }
 ul{
     list-style-type: none;
@@ -127,16 +169,13 @@ button a:hover{
         margin-top: 1rem;
     }
     .my-photo{
-        width: 15rem;
-    }
-    .biography{
-        font-size: 1.3rem;
-        width: 100%;
+        width: 20rem;
     }
     .bio-text{
-        font-size: 1.7rem;
+        font-size: 1rem;
+        margin-left: 2rem;
     }
-    .title{
+    .title-like{
         top: 25rem;
         left: 11.6rem;
         font-size: 2rem;
@@ -159,24 +198,23 @@ button a:hover{
 }
 @media only screen and (min-width:1000px){
     h1{
-        font-size: 3rem;
+        font-size: 1.5rem;
     }
     main{
         display: flex;
         flex-direction: column;
         width: 100%;
     }
-    .title{
-        display: block;
-        position: initial;
-        font-size: 5rem;
+    .title-like{
+        font-size: 2rem;
     }
     .biography{
         margin-top: 2.5rem;
         margin-bottom: 10rem;
     }
     .bio-text{
-        font-size: 4rem;
+        font-size: 1.4rem;
+        margin-left: 3rem;
     }
     .my-photo{
         width: 20rem;
